; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/test/examples/extr_example_basic_2.c_output_callback.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/test/examples/extr_example_basic_2.c_output_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }
%struct.CONTEXT_T = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32*)* @output_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @output_callback(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.CONTEXT_T*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to %struct.CONTEXT_T*
  store %struct.CONTEXT_T* %9, %struct.CONTEXT_T** %5, align 8
  %10 = load %struct.CONTEXT_T*, %struct.CONTEXT_T** %5, align 8
  %11 = getelementptr inbounds %struct.CONTEXT_T, %struct.CONTEXT_T* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @mmal_queue_put(i32 %12, i32* %13)
  %15 = load %struct.CONTEXT_T*, %struct.CONTEXT_T** %5, align 8
  %16 = getelementptr inbounds %struct.CONTEXT_T, %struct.CONTEXT_T* %15, i32 0, i32 0
  %17 = call i32 @vcos_semaphore_post(i32* %16)
  ret void
}

declare dso_local i32 @mmal_queue_put(i32, i32*) #1

declare dso_local i32 @vcos_semaphore_post(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
